--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <meta name="theme-color" content="#0052CC">
   <link rel="manifest" href="/app-Evangebla/manifest.json">
   <link rel="apple-touch-icon" href="/app-Evangebla/icon.png">
+  <!-- Chart.js y librerías -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <title>EVANG_EBLA</title>
   <style>
     body { margin: 0; font-family: Arial, sans-serif; }
@@ -225,7 +229,7 @@
     <script src="/app-Evangebla/app.js"></script>
   <script>
     // Service Worker registration
-    if ('serviceWorker' in navigator) navigator.serviceWorker.register('/app-Evangebla/service-worker.js');('/app-Evangebla/service-worker.js');
+    if ('serviceWorker' in navigator) navigator.serviceWorker.register('/app-Evangebla/service-worker.js');
   </script>
 </body>
 </html>
